--- a/vista/css/css.css
+++ b/vista/css/css.css
@@ -134,7 +134,14 @@ border-radius: 20px;
   float: left;
   width: 50%;
 }
-
+.left-column{
+  float: left;
+  width: 33%;
+}
+.right-column{
+  float: left;
+  width: 66%;
+}
 /*
   Organización de la página de ayuda
 */
@@ -144,6 +151,26 @@ border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 10px;
   background-color: #ffbdbd;
+}
+
+/*
+  Organización de la página de conócenos
+*/
+#bconocenos{
+  margin-left: 50px;
+  margin-right: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.conocenosCard {
+  padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-radius: 10px;
+  background-color: #c9c9ff;
+  text-align: center;
+  margin: 30px;
 }
 
 /*
@@ -158,15 +185,13 @@ border-radius: 20px;
 .botonGuay{
   border-radius: 10px;
   display: inline-block;
+  margin: 2px;
   padding: 8px;
   color: black;
-  text-align: center;
   cursor: pointer;
-  width: 33%;
   font-size: 16px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   background-color: white;
-  margin-left: 10px;
 }
 .botonGuay:hover{
   border-style: solid;
@@ -219,26 +244,30 @@ img{
 }
 
 /*
- perfiles
+  Perfiles
 */
 .burbuja{
   background-color: white;
   border: 0px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 4px;
   margin: 4px;
 }
-#bcoment{
-  float:left;
-  background-color: #c9c9ff;
+div #card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 20px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  width: 66%;
+  margin: 40px;
+  padding: 8px;
+  border-radius: 10px;
+  text-align: center;
+  background-color: #c9c9ff;
 }
-
+div #card img {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+  border-radius: 10px;
+}
 #btitulo{
   font-weight: bold;
     background-color: #ffbdbd;
@@ -247,34 +276,17 @@ img{
 #btexto{
   padding: 14px;
 }
-
-#bconocenos{
-  margin-left: 50px;
-  margin-right: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-div #card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  min-height: 250px;
-  max-width: 300px;
-  margin: 60px 30px 0px 30px;
-  padding: 8px;
-  border-radius: 20px;
-  float: left;
-  text-align: center;
+#bcoment{
+  float:left;
   background-color: #c9c9ff;
-}
-
-div #card img {
-  width: 100%;
-  max-width: 250px;
-  height: auto;
-  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  width: 66%;
 }
 #FotoPerfil{
-    border-radius: 20px;
+    border-radius: 10px;
 }
 #Modperfil{
 margin:auto;
@@ -336,19 +348,6 @@ tarjetas ayuda
 #botonRojo{
   background-color: red;
 }
-
-
-.conocenosCard {
-  padding: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
-  border-radius: 10px;
-  background-color: #c9c9ff;
-  text-align: center;
-  margin: 30px;
-}
-
 /*
 extras
 */
